--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "@google/genai": "^1.41.0",
     "lucide-react": "^0.564.0",
     "react": "^19.2.4",
-    "react-dom": "^19.2.4"
-    "@supabase/supabase-js": "^2.0.0",
+    "react-dom": "^19.2.4",
+    "@supabase/supabase-js": "^2.0.0"
   },
   "devDependencies": {
     "@types/react": "^19.0.0",
